- Fixed bug #40428, imagepstext() doesn't accept optional parameter   (Pierre)